# to-tui-plugins

./: .gitignore  LICENSE  README.md  justfile  marketplace.toml
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-core-sync/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-robustness-and-features/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-ux-polish/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-tasklist-selection/: 04-02-PLAN.md  04-02-SUMMARY.md  04-VERIFICATION.md
.planning/quick/001-flatten-dependency-hierarchy-to-blocked-by/: 001-PLAN.md  001-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
claude-tasks/: Cargo.toml  README.md  plugin.toml
claude-tasks/src/: claude_task.rs  commands.rs  config.rs  discovery.rs  errors.rs  guidance.rs  hierarchy.rs  lib.rs  log.rs  staleness.rs  state.rs  sync.rs  watcher.rs
cloud-sync/: Cargo.toml  plugin.toml
cloud-sync/src/: api.rs  lib.rs  models.rs  sync.rs
jira-claude/: CHANGELOG.md  Cargo.toml  README.md  plugin.toml
jira-claude/src/: lib.rs
