[package]
name = "cloud-sync"
version = "0.1.0"
edition = "2021"
description = "Sync totui projects and todos to the cloud for cross-device access"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core - Required
totui-plugin-interface = { git = "https://github.com/grimurjonsson/to-tui", branch = "main" }
abi_stable = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
ureq = { version = "2", features = ["json"] }

# Utilities
uuid = { version = "1.20", features = ["v4"] }
dirs = "6"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
