[package]
name = "jira-claude"
version = "0.1.2"
edition = "2021"
description = "Generate todos from Jira tickets using Claude AI"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NOTE: For local development, use path dependency. For release, update to git reference
# once the plugin framework is pushed to the main branch.
# Production: totui-plugin-interface = { git = "https://github.com/grimurjonsson/to-tui", branch = "main" }
totui-plugin-interface = { path = "../../to-tui/crates/totui-plugin-interface" }
abi_stable = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
