[package]
name = "jira-claude"
version = "0.1.9"
edition = "2021"
description = "Generate todos from Jira tickets using Claude AI"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# totui-plugin-interface = { path = "/Users/gimmi/Documents/Sources/rust/to-tui/crates/totui-plugin-interface" }
totui-plugin-interface = { git = "https://github.com/grimurjonsson/to-tui", branch = "main" }
abi_stable = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
